--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.4",
+    "@mui/styled-engine-sc": "^6.1.4",
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
     "next": "14.2.15",
@@ -16,7 +20,8 @@
     "react-dom": "^18",
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.6",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@types/node": "^20",
